# field_guide

./: .gitignore  .replit  digital_garden.db  pyproject.toml  pyrightconfig.json
app/: main.py  markdown_processor.py  schemas.py
app/routers/: notes.py  pages.py
app/templates/: 404.html  base.html  graph.html  index.html  note.html  page.html
app/templates/partials/: note_content.html  note_list.html
content/notes/: bird-watching-basics.md  connecting-thoughts.md  hiking-journal-entry.md  nurturing-ideas.md  test.md  welcome.md  wildflower-identification.md
content/pages/: about.md  home.md
